feat: [CDS-70186]: Added support for secret command step output variables (#48690)
* feat: [CDS-70186]: Added support for secrets command step output variables

* [CDS-70186]: Fixed PR comments

* feat: [CDS-71221]: Fixed Task type